--- a/Desafios-modulo3/imagens/style.css
+++ b/Desafios-modulo3/imagens/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: verdana, tahoma, geneva, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -18,9 +29,10 @@ header {
 }
 
 header > h1 {
-    font-size: 3em;
+    font-size: 7vw;
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
 }
 header > p {
     padding-bottom: 50px;
@@ -37,10 +49,12 @@ a:hover {
 }
 
 section {
-    padding-top: 10vh;
+    padding-top: 11vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -54,7 +68,8 @@ section.imagem {
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.336);
-    width: 400px;
+    display: inline-block;
+    padding: 12px;
 }
 
 footer {
