--- a/Desafios-modulo3/imagens/style.css
+++ b/Desafios-modulo3/imagens/style.css
@@ -49,12 +49,17 @@ a:hover {
 }
 
 section {
-    padding-top: 11vh;
-    padding-bottom: 10vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 3.5vw;
+}
+
+section > p {
+    padding: 1em;
+    border-radius: 5px;
 }
 
 section.normal {
@@ -63,13 +68,28 @@ section.normal {
 }
 
 section.imagem {
+    color: white;
+    box-shadow: inset 6px 6px 10px rgba(0, 0, 0, 0.445);
+    background-attachment: fixed;
+}
 
+section#img01 {
+    background-image: url("../imagens/background001.jpg");
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url("background002.jpg");
+    background-position: right center;
+    background-size: cover;
 }
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.336);
     display: inline-block;
     padding: 12px;
+    text-shadow: 2px 2px 0px black;
 }
 
 footer {
