--- a/Aulas-modulo3/ex003/style.css
+++ b/Aulas-modulo3/ex003/style.css
@@ -5,8 +5,24 @@ table {
     border-collapse: collapse;
 }
 
+caption {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 8px;
+    background-color: gray;
+}
+
 body {
     font-family: 'Times New Roman', Times, serif;
+}
+
+tbody > tr:nth-child(2n) {
+    background-color: rgba(106, 106, 238, 0.425);
+    font-weight: bold;
+}
+
+tbody > tr:nth-child(odd) {
+    background-color: rgba(199, 202, 18, 0.466);
 }
 
 th, td {
