--- a/Aulas-modulo3/ex003/style.css
+++ b/Aulas-modulo3/ex003/style.css
@@ -3,6 +3,7 @@
 table {
     width: 500px;
     border-collapse: collapse;
+    position: relative;
 }
 
 caption {
@@ -34,6 +35,12 @@ thead {
     background-color: rgba(241, 50, 50, 0.623);
     color: white;
 }    
+
+thead > tr > th {
+    background-color: rgba(241, 50, 50, 0.623);
+    position: sticky;
+    top: 0px;
+}
 
 tfoot {
     background-color: gray;
